Fix the overflow of result section

--- a/style.css
+++ b/style.css
@@ -106,6 +106,7 @@ body {
 }
 
 .result-summary {
+  --br-radius: 2rem;
   max-width: 46rem;
   display: grid;
 }
@@ -113,7 +114,8 @@ body {
 @media (min-width: 600px) {
   .result-summary {
     grid-template-columns: 1fr 1fr;
-    border-radius: 2rem;
+    border-radius: var(--br-radius);
+    overflow: hidden;
     box-shadow: 0.5rem 1rem 3rem hsl(var(--clr-neutral-hsl-700), 0.2);
   }
 }
@@ -121,5 +123,6 @@ body {
 .results {
   color: hsl(var(--clr-neutral-hsl-100), 0.8);
   text-align: center;
+  border-radius: var(--br-radius);
   background: var(--gradient-primary);
 }
